# FLASCO-Backend

./: .env.example  Dockerfile  README.md  docker-compose.debug.yaml  docker-compose.local.yaml  meupet.patch  mudancas.txt  pyproject.toml  render.yaml  saida.txt  teste.py
alembic/: env.py
alembic/versions/: 183b33457212_aplica_restrição_de_matrícula_só_para_.py  344f4d2f4e64_roda_pelo_amor_de_deus.py  507c4971812b_nome_descritivo.py  7f52bf4d09f6_add_type_to_user_table.py  a1d4a58297f7_restrição_aluno_id_no_se_matricula.py  df23133e6bc0_migration_inicial.py
flasco/: dependencies.py  main.py  settings.py
flasco/api/: auth.py  comentario.py  enums.py  modulo.py  users.py  video.py
flasco/application/dtos/: auth_dto.py  comentario_dto.py  error_dto.py  modulo_dto.py  user_dto.py  video_dto.py
flasco/application/enums/: curso.py  formacao.py
flasco/application/utils/: auth.py
flasco/database/: database.py  filestorage.py
flasco/gateways/: video_stream.py
flasco/infra/middleware/: verification_token_middleware.py
flasco/infra/services/: jwt_token_service.py
flasco/models/: __init__.py  aluno.py  anexo.py  armazena_um.py  base.py  base_mixin.py  base_timestamp.py  comentario.py  curte_um.py  favorita_um.py  modulo.py  professor.py  se_matricula.py  usuario.py  video.py
flasco/repositories/: aluno_repository.py  armazena_um.py  base_repository.py  comentario_repository.py  curte_um_repository.py  favorito_repository.py  modulo_repository.py  professor_repository.py  user_repository.py  usuario_repository.py  video_repository.py
flasco/usecases/: dislike_video.py  like_video.py  video_delete_usecase.py  video_get.py  video_list.py  video_upload.py
flasco/usecases/auth/: create_user_aluno.py  create_user_professor.py  delete_user.py  get_user_by_id.py  login.py
flasco/usecases/comentario/: create_comentario.py  delete_comentario.py  get_comentarios_by_video.py  update_comentario.py
flasco/usecases/favoritos/: favorito_put.py
flasco/usecases/modulo/: create_modulo_usecase.py  delete_modulo_usecase.py  favorite_modulo_usecase.py  get_all_modulos_usecase.py  get_favorited_modulos_usecase.py
flasco/usecases/user/: get_current_user_details_usecase.py
meu-projeto/: pyproject.toml
