[project]
name = "flasco"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Cezar Negreiros",email = "cezarnegreiros07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "psycopg[async,binary] (>=3.2.6,<4.0.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "supabase (>=2.15.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
