[tool.poetry]
name = "flasco"
version = "0.1.0"
description = ""
authors = ["Carlos Cezar Negreiros <cezarnegreiros07@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12, <4.0"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = {extras = ["standard"], version = ">=0.115.12,<0.116.0"}
pydantic = ">=2.11.4,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
sqlalchemy = ">=2.0.40,<3.0.0"
supabase = ">=2.15.1,<3.0.0"
debugpy = ">=1.8.14,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
pyjwt = ">=2.10.1,<3.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
alembic = ">=1.16.1,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
psycopg = {extras = ["binary"], version = ">=3.0.0"}
bcrypt = "==4.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
